# sccs_tools-snapshots

./: CHANGES  COPYING  MANIFEST  Makefile  README  aclocal.m4  configure  configure.in  makefile.in  mkdirs.sh
certify/: Makefile  README  config.txt  makefile.in  release.txt
package/: sccs_tools-12.0.spec
package/debian/: changelog  control  copyright  rules
src/: Makefile  makefile.in
src/fixsccs/: Makefile  makefile.in
src/fixsccs/src/: Makefile  fixsccs.c  makefile.in
src/fixsccs/test/: Makefile  makefile.in  run_test.sh
src/getdelta/: Makefile  makefile.in
src/getdelta/src/: Makefile  getdelta.c  makefile.in  sccsget.c  sccsget.sh
src/getdelta/test/: Makefile  makefile.in  run_test.sh
src/putdelta/: Makefile  makefile.in
src/putdelta/src/: Makefile  makefile.in  putdelta.c  sccsput.c  sccsput.sh
src/putdelta/test/: Makefile  makefile.in  run_test.sh
src/sccs2rcs/: Makefile  makefile.in
src/sccs2rcs/src/: Makefile  makefile.in  sccs2rcs.c
src/sccs2rcs/test/: Makefile  do_test.sh  makefile.in  run_test.sh  s.testfile1.c  s.testfile2.c  s.testfile3.c
user/: Makefile  fixsccs.man  getdelta.doc  getdelta.man  makefile.in  putdelta.doc  putdelta.man  sccs2rcs.man  sccsget.doc  sccsget.man  sccsput.doc  sccsput.man
